+ updated checkin footer so it doesn't overlap buttons (fixes #428)

--- a/RockWeb/Themes/CheckinPark/Styles/checkin-theme.css
+++ b/RockWeb/Themes/CheckinPark/Styles/checkin-theme.css
@@ -7621,7 +7621,6 @@ body {
   position: absolute;
   bottom: 0;
   margin-bottom: 12px;
-  width: 80%;
 }
 .checkin-count h3,
 .checkin-count li {
